if (CONFIG_PREFIX MATCHES $ENV{HOME})
set (CONFIG_LV2DIR ${CONFIG_PREFIX}/.lv2)
endif ()
install (FILES qmidiarp_seq.ttl DESTINATION ${CONFIG_LV2DIR}/qmidiarp_seq.lv2/)
install (FILES qmidiarp_seq_ui.ttl DESTINATION ${CONFIG_LV2DIR}/qmidiarp_seq.lv2/)
install (FILES manifest.ttl DESTINATION ${CONFIG_LV2DIR}/qmidiarp_seq.lv2/)
