# Makefile.am for qmidiarp

pixmaps = \
	arpadd.xpm arprename.xpm formsave.xpm patternstore.xpm \
	arpremove.xpm editmodeon.xpm play.xpm patternremove.xpm \
	qmidiarp2.xpm midiclock.xpm lfoadd.xpm latchmodeon.xpm globtog.xpm\
	seqadd.xpm seqwavcp.xpm lfowavcp.xpm seqrecord.xpm jacktr.xpm\
	lfowcustm.xpm lfowsawdn.xpm lfowsawup.xpm lfowsine.xpm lfowtri.xpm\
	lfowsquare.xpm settings.xpm groovetog.xpm eventlog.xpm \
	filenew.xpm filesave.xpm filesaveas.xpm fileopen.xpm filequit.xpm

EXTRA_DIST = $(pixmaps)
